get path
