# GO-wongnok/cmd/server/docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/api/v1/food-recipes": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of food recipes with pagination",
                 "consumes": [
                     "application/json"
@@ -235,6 +240,11 @@
         },
         "/api/v1/food-recipes/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a single food recipe by ID",
                 "consumes": [
                     "application/json"
@@ -731,6 +741,9 @@
                 "difficulty": {
                     "$ref": "#/definitions/dto.DifficultyResponse"
                 },
+                "favorite": {
+                    "$ref": "#/definitions/dto.FavoriteResponse"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -745,6 +758,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "rating": {
+                    "$ref": "#/definitions/dto.RatingResponse"
                 },
                 "updatedAt": {
                     "type": "string"
